--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.503.0",
     "mongodb": "^6.16.0",
     "next": "15.3.1",
     "react": "^19.0.0",
